<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".portrait_global_frag">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="@string/global_updates"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmed"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/tvConfirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorPrimaryText"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvConfPerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/confirmed"
            android:text=""
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/tvRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="@color/recovered"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRecovPerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/recovered"
            android:text="TextView"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deaths"
            android:textColor="@color/colorSecondaryText" />

        <TextView
            android:id="@+id/tvDeaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/deaths"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDeathPerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deaths"
            android:text="TextView"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSeeAllCountries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15sp"
        android:layout_gravity="center"
        android:background="@drawable/buttons"
        android:onClick="seeAllCountries"
        android:text="@string/see_all_countries"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/tvLastUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/colorSecondaryText" />

</LinearLayout>